# colibri-poc

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  ExemplePoC.pptx  MANIFEST.in  README.md  discussions.rst  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
ci/: environment.yml
colibri/: .coveragerc  .gitlab-ci.yml  README.md  __project_information__.py  pytest.ini  setup.py
colibri/colibri/: __project_information__.py
colibri/config/: constants.py
colibri/core/: Building.py  constants.py  model.py  project.py
colibri/data/: systems_backbone.json
colibri/modules/: __init__.py
colibri/tests/: pytest.ini  test_model.py
colibri/utils/: __init__.py  encorder_utils.py  enums_utils.py  files_utils.py  unit_utils.py
config/: constants.py
connectors/generics/: generic.py
connectors/hydronics/: fluid_flow.py
connectors/thermal/: flow.py
core/: Building.py  __init__.py  conditions.py  file.py  inputs.py  link.py  model.py  outputs.py  parameters.py  plot.py  project.py  variable.py  variable_connector.py  variable_list.py
core/templates/: inputs.py  outputs.py  parameters.py
core/variables/: variable.py
data/: constants.py  unit_dictionary.json
data/Building/: building_data.py
datamodel/examples/: Tutorial.ipynb  house_1.json  house_1.py
docs/source/: conf.py  (+1 more)
tests/: pytest.ini  test_building.py  test_project.py  test_pump.py  test_variable.py  test_weather.py
utils/: __init__.py  converters_utils.py  enums_utils.py  files_utils.py  noncyclyc_encoder.py  singleton.py  unit_dictionary.py  unit_utils.py
(+459 files in other folders)
